Project

General

Profile

Actions

Bug #15702

closed

showmount fails for Solaris, AIX and HP-UX clients

Added by Gordon Ross 4 months ago. Updated 2 months ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
nfs - NFS server and client
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
racktop:BSR-10518

Description

With an NFS server is configured for NFSv3 as the minimum:

# sharectl set -p server_versmin=3 nfs

there are several legacy NFS clients that cannot see NFS exports.
Solaris :
$ showmount -e tnstor2
showmount: RPC: Program/version mismatch
$ cat /etc/release
Oracle Solaris 11.4 SPARC
Copyright (c) 1983, 2021, Oracle and/or its affiliates.
Assembled 25 August 2021
$ uname -r
5.11
$ rpcinfo -p |grep 100003
100003 2 udp 2049 nfs
100003 3 udp 2049 nfs
100003 2 tcp 2049 nfs
100003 3 tcp 2049 nfs
100003 4 tcp 2049 nfs

AIX :
$ showmount -e tnstor2
showmount: 1831-263 RPC: 1832-012 Program/version mismatch
$

HP :
$ showmount -e tnstor2
showmount: RPC: Program/version mismatch

Testing done
Before patch:

% showmount -e beastie.local
showmount: Cannot retrieve info from host: beastie.local: RPC failed:: RPC: Program/version mismatch; low version = 3, high version = 3

After patch:

% rpcinfo -u beastie.local 100005
program 100005 version 1 is ready and waiting
program 100005 version 2 is ready and waiting
program 100005 version 3 is ready and waiting

% showmount -e beastie.local
Exports list on beastie.local:
/code/gcc13                         Everyone
/export/home/tsoome                 Everyone
/export/illumos                     Everyone
/export/uefi-oi                     Everyone
/code/illumos-gate                  Everyone


Related issues

Related to illumos gate - Bug #15703: showmount: RPC: Program/version mismatchClosedToomas Soome

Actions
Actions #1

Updated by Gordon Ross 4 months ago

Those legacy NFS clients use mount protocol version 1 even when configured for NFS version 3.
The mountd program disables mount protocol version 1 when the NFS server is set with the minimum NFS version at 3 or higher.
There's really no reason to do this. There's nothing wrong with allowing mount protocol version 1, and doing so preserves compatibility with legacy clients.

Actions #2

Updated by Electric Monk 4 months ago

  • Gerrit CR set to 2882
Actions #3

Updated by Gordon Ross 4 months ago

  • External Bug set to racktop:BSR-10518
Actions #4

Updated by Gordon Ross 4 months ago

  • Related to Bug #15703: showmount: RPC: Program/version mismatch added
Actions #5

Updated by Gordon Ross 3 months ago

  • Assignee changed from Gordon Ross to Toomas Soome

Toomas, please RTI this.

Actions #6

Updated by Toomas Soome 3 months ago

  • Description updated (diff)
  • % Done changed from 0 to 90
Actions #7

Updated by Electric Monk 2 months ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 3ed679c05f09ecd1db4ab8c743f9d20578fd2f0b

commit  3ed679c05f09ecd1db4ab8c743f9d20578fd2f0b
Author: Gordon Ross <gwr@racktopsystems.com>
Date:   2023-07-18T16:56:31.000Z

    15702 showmount fails for Solaris, AIX and HP-UX clients
    Reviewed by: Toomas Soome <tsoome@me.com>
    Reviewed by: Vitaliy Gusev <gusev.vitaliy@gmail.com>
    Approved by: Dan McDonald <danmcd@mnx.io>

Actions

Also available in: Atom PDF