15702 showmount fails for Solaris, AIX and HP-UX clients Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Vitaliy Gusev <gusev.vitaliy@gmail.com> Approved by: Dan McDonald <danmcd@mnx.io>